--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,5 @@ License: MIT
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
+URL: https://github.com/wesley4546/filecreateR
+BugReports: https://github.com/wesley4546/filecreateR/issues
